Bug 587318: Only pad horizontal glyph metrics. r=jdaggett